--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,10 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "jquery": "^3.6.0",
-    "pg": "^8.7.3"
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
+    "pg": "^8.7.3",
+    "postgres-date": "^2.1.0",
+    "xss": "^1.0.13"
   }
 }
