--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.29.4",
     "pg": "^8.7.3",
     "postgres-date": "^2.1.0",
+    "toastify-js": "^1.12.0",
     "xss": "^1.0.13"
   }
 }
